--- a/books/LoginView.xib
+++ b/books/LoginView.xib
@@ -227,9 +227,8 @@
 				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="893777979"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="808127792"/>
+					<int key="NSColorSpace">1</int>
+					<bytes key="NSRGB">MSAxIDEAA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
